# freelite

./: .gitignore  CMakeLists.txt  README.md  func_code.h  lite-lib.c  lite-lib.cpp  lite-lib.h  rpc.c  rpc.h  rpc_types.h  test_client.c  test_join.c  test_server.c
client/: CMakeLists.txt  test_client.c  test_join.c  test_latency.c  test_rpc.c  test_server.c  test_write.c
client/lib/: lite-lib.c  rpc.c  rpc.h
doc/: CentOS内核修改.md  FreeFlow项目阅读.onepkg  LITE容器内运行环境搭建.md  LITE运行环境搭建.md  Onenote项目阅读.md
inc/: compiler.h  func_code.h  lite-lib.h  log.h  rpc_types.h  vcm_types.hpp
lib/: lite-lib.c  lite-lib.h  rpc.c  rpc.h
router/: CMakeLists.txt  config.hpp  test_router.c  test_router.cpp
router/lib/: lite-lib.c  routing.cpp  routing.hpp  shm.c  shm.cpp  shm.h
vcm/: CMakeLists.txt  vcm.cpp
